public_html/static/css/style.css
/* ... */
.slider-pro h1.sp-layer{font-size:32px;line-height:1.4;margin:0}
.slider-pro h2.sp-layer{font-size:24px;line-height:1.4;margin:0}
.slider-pro h3.sp-layer{font-size:19px;line-height:1.4;margin:0}
.slider-pro h4.sp-layer{font-size:16px;line-height:1.4;margin:0}
.slider-pro h5.sp-layer{font-size:13px;line-height:1.4;margin:0}
.slider-pro h6.sp-layer{font-size:11px;line-height:1.4;margin:0}
.slider-pro img.sp-layer{border:none}



/* customize componenets*/
/* slider*/
.slider{
	margin-bottom:1em;
	max-width: 800px;
	max-height: 450px;
	overflow:hidden;
}

.slider-pro a{color:#ddd;transition:0.3s color;}
.slider-pro a:hover{color:#eee}
.slider-pro a:focus{color:#fff}
/*news slider*/
.latestNewsSlider{
	margin-bottom:1em;
	max-width: 800px;
	max-height: 450px;
	overflow:hidden;
}

.latestNewsSlider .sp-thumbnail {
		background-color: #F0F0F0;
}
.latestNewsSlider .sp-thumbnail-image-container {
	width: 100px;
	height: 80px;
	overflow: hidden;
}

.latestNewsSlider .sp-thumbnail-image {
	height: 100%;
}

.latestNewsSlider .sp-thumbnail-text {
	width: 170px;
		padding: 8px;
		font-size: 1.1em;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
}

.latestNewsSlider .sp-thumbnail-title {
	margin-bottom: 5px;
	text-transform: uppercase;
	color: #333;
}

.latestNewsSlider .sp-thumbnail-description {
	font-size: 14px;
	color: #333;
}
.sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:before{
	border-left-color:#2080d0;
}
.sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:after{
	border-right-color:#2080d0;
}
.sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:before{
	border-left-color:#2080d0;
}
.sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:after{
	border-left-color:#2080d0;
}
.sp-bottom-thumbnails.sp-has-pointer .sp-selected-thumbnail:before{
	border-bottom-color:#2080d0;
}
.sp-bottom-thumbnails.sp-has-pointer .sp-selected-thumbnail:after{
	border-bottom-color:#2080d0;
}
.sp-bottom-thumbnails.sp-has-pointer .sp-selected-thumbnail:before{
	right: 0;
	left: 0;
}

@media (max-width: 500px) {
	.latestNewsSlider .sp-thumbnail {
		text-align: center;
	}

	.latestNewsSlider .sp-thumbnail-image-container {
		display: none;
	}

	.latestNewsSlider .sp-thumbnail-text {
		width: 120px;
	}

	.latestNewsSlider .sp-thumbnail-title {
		font-size: 12px;
		text-transform: uppercase;
	}

	.latestNewsSlider .sp-thumbnail-description {
		display: none;
	}
}


@media all and (min-width: 768px) and (max-width: 959px) {
	.sB3{
		margin: 0 50px 1em;
		font-size: 2rem;
	}
	.sB3:before{
		width: 50px;
		right: -50px;
		background-position: -202px -350px;
	}
	.sB3:after{
		width: 50px;
		left: -50px;
		background-position: -140px -350px;
	}
}


@media (max-width: 767px) {
	#sHeader{
		height: 90px;
	}
	#sHeader .cn{
		width: 100%;
	}
	#sHeader .brand img{
		width: 320px;
		height: 85px;
	}
	#sHeader .langlist .isActive{
		display: none;
	}
	.sB2{
		margin:0 auto;
	}
	.sB3{
		margin: 0 30px 1em;
		height:auto;
		font-size: 2rem;
	}
	.sB3:before{
		width: 30px;
		right: -30px;
		background-position: -202px -350px;
	}
	.sB3:after{
		width: 30px;
		left: -30px;
		background-position: -170px -350px;
	}
	.salavat{
		max-width: 200px;
	}
	.slider-pro h3.sp-layer{
		font-size: 1.3em;
	}
	.pageTitle{padding-top:1em;}
	.radioGateway{padding: 1em 0.4em; }
}

@media (max-width: 543px) {
	#sHeader .langlist{
		position: absolute;
		top: 0;
		left: 0;
	}
	.shahidImani{
		order:1;
	}
}

